--- a/src/pages/LoginPage/LoginPage.module.css
+++ b/src/pages/LoginPage/LoginPage.module.css
@@ -1,14 +1,20 @@
 .wrapper {
   padding: 30px 0;
   display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
-.form {
-  width: 60%;
+.loggingWrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+
+  width: 40%;
   margin-left: auto;
   margin-right: auto;
 
-  padding: 30px;
+  padding: 20px;
   border: 4px solid rgb(32, 32, 32);
   border-radius: 20px;
 
@@ -18,68 +24,10 @@
     rgba(0, 191, 255, 0.8)
   );
 }
-
-.inputsPart {
-  display: flex;
-  flex-direction: column;
-
-  gap: 15px;
-  margin-bottom: 20px;
-}
-
-.labelFieldWrapper {
-  display: flex;
-  align-items: center;
-
-  justify-content: space-between;
-  width: 60%;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.label {
+.loggingText {
   font-weight: 600;
   font-size: 18px;
-  padding: 5px;
-}
 
-.input {
-  width: 280px;
-
-  padding: 14px;
-  padding-bottom: 12px;
-
-  outline: none;
-  border: none;
-  border-bottom: 2px solid rgb(32, 32, 32);
-  border-radius: 14px;
-
-  font-size: 18px;
-  background-color: rgba(255, 255, 255, 0.3);
-  transition: background-color 250ms ease-in-out;
-}
-.input:hover,
-.input:focus {
-  background-color: rgba(255, 255, 255, 0.6);
-}
-
-.btn {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 8px 14px;
-
-  outline: none;
-  border: 2px solid transparent;
-  border-radius: 10px;
-
-  font-size: 18px;
-  color: inherit;
-  background-color: rgb(46, 170, 104);
-  transition: border-color 250ms ease-in-out;
-}
-
-.btn:hover,
-.btn:focus {
-  border-color: rgb(255, 255, 255);
+  text-align: center;
+  /* color: rgb(58, 212, 130); */
 }
